# Eve-flipper

./: .env.example  .gitignore  .golangci.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  biome.jsonc  downloads.json  go.mod  go.sum  lefthook.yml  main.go  main_wails.go  make.ps1  mise.toml  resource_windows_amd64.syso  sde_runtime.go  sumi.toml
.codex/: hooks.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: app.manifest
assets/badges/: downloads.json
docs/wiki/: Execution-Plan.md  Home-update.md  War-Tracker.md
frontend/: components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
internal/api/: backtest.go  contracts.go  execution_plan_test.go  hosted_access.go  hosted_access_test.go  items.go  orderbook.go  orderbook_handlers_test.go  paper_trades.go  paper_trades_reconcile.go  paper_trades_reconcile_test.go  route_risk.go  route_risk_test.go  security_vault.go  server.go  server_test.go  station_ai_wiki_rag.go  telemetry.go  ui.go  update.go  update_test.go
internal/auth/: store.go
internal/config/: config.go
internal/db/: config.go  db.go  db_test.go  demand.go  history.go  maintenance.go  market_history.go  orderbook.go  orderbook_test.go  paper_trades.go  paper_trades_test.go  results.go  user_scope.go  watchlist.go
(+128 files in other folders)
